geckodriver.log
1542738081530	mozrunner::runner	INFO	Running command: "C:\\Program Files (x86)\\Mozilla Firefox\\firefox.exe" "-marionette" "-headless" "-foreground" "-no-remote" "-profile" "C:\\Users\\DELL\\AppData\\Local\\Temp\\rust_mozprofile.KuoMcc4guzPF"
*** You are running in headless mode.
JavaScript error: 1109697607.cfg, line 4: ReferenceError: Components is not defined
1542738087064	addons.webextension.screenshots@mozilla.org	WARN	Loading extension 'screenshots@mozilla.org': Reading manifest: Invalid host permission: resource://pdf.js/
1542738087065	addons.webextension.screenshots@mozilla.org	WARN	Loading extension 'screenshots@mozilla.org': Reading manifest: Invalid host permission: about:reader*
1542738113742	Marionette	INFO	Listening on port 63911
1542738114037	Marionette	WARN	TLS certificate errors will be ignored for this session
[Parent 14912, Gecko_IOThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346
console.error: BroadcastService: 
  receivedBroadcastMessage: handler for
  remote-settings/monitor_changes
  threw error:
  Message: Error: Polling for changes failed: NetworkError when attempting to fetch resource..
  Stack:
    remoteSettingsFunction/remoteSettings.pollChanges@resource://services-settings/remote-settings.js:750:13

JavaScript error: http://127.0.0.1:8000/js/app.js, line 78: Error: Module build failed: SyntaxError: C:/Users/Vikeln/Desktop/New folder (2)/WebApp/Blog/resources/assets/js/app.js: Unexpected token, expected ; (24:18)

[0m [90m 22 | [39m})[33m;[39m
 [90m 23 | [39m
[31m[1m>[22m[39m[90m 24 | [39m[36mconst[39m app[33m=[39m [36mnew[39m [33mVue[39m{
 [90m    | [39m                  [31m[1m^[22m[39m
 [90m 25 | [39m  el[33m:[39m [32m'#vue-wrapper'[39m[33m,[39m
 [90m 26 | [39m  data[33m:[39m{
 [90m 27 | [39m    items[33m:[39m [][33m,[39m[0m

,[39m
 [90m 26 | [39m  data[33m:[39m{
 [90m 27 | [39m    items[33m:[39m [][33m,[39m[0m

JavaScript error: http://127.0.0.1:8000/js/app.js, line 78: Error: Module build failed: SyntaxError: C:/Users/Vikeln/Desktop/New folder (2)/WebApp/Blog/resources/assets/js/app.js: Unexpected token, expected ; (24:18)

[0m [90m 22 | [39m})[33m;[39m
 [90m 23 | [39m
[31m[1m>[22m[39m[90m 24 | [39m[36mconst[39m app[33m=[39m [36mnew[39m [33mVue[39m{
 [90m    | [39m                  [31m[1m^[22m[39m
 [90m 25 | [39m  el[33m:[39m [32m'#vue-wrapper'[39m[33m,[39m
 [90m 26 | [39m  data[33m:[39m{
 [90m 27 | [39m    items[33m:[39m [][33m,[39m[0m

[Parent 15320, Gecko_IOThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346
[Child 15108, Chrome_ChildThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346
[Child 15108, Chrome_ChildThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346
[Parent 15320, Gecko_IOThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346
[Child 3044, Chrome_ChildThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346
[Parent 15320, Gecko_IOThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346
[Child 2852, Chrome_ChildThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346
[Parent 15320, Gecko_IOThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346
[Parent 15320, Gecko_IOThread] WARNING: file z:/build/build/src/ipc/chromium/src/base/process_util_win.cc, line 188
1542739272271	Marionette	INFO	Stopped listening on port 63600
JavaScript error: resource:///modules/sessionstore/SessionSaver.jsm, line 180: NS_ERROR_FAILURE: Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIAppShellService.hiddenDOMWindow]
